# airsim_tools

./: .gitignore  README.md  pyproject.toml  save_dataset.py  semantics.py  trajectory_functions.py
airsim_tools/: data_saver.py  depth_conversion.py  save_dataset.py  semantics.py  trajectory_functions.py
airsim_tools/config/: configs.py
airsim_tools/scripts/: execute_saver.py  get_voxel_grid.py
config/: configs.py
