[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "airsim_tools"
authors = [{name = "David Morilla-Cabello", email = "davidmc@unizar.es"}]
readme="README.md"
requires-python=">=3.7.0"
version = "0.1.0"
dependencies=[
    "numpy",
    "matplotlib",
    "Pillow",
    "msgpack-rpc-python",
    "airsim",
    "tyro",
]

[tool.setuptools]
packages = ["airsim_tools"]

# black
[tool.black]
line-length = 120


